--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,7 @@ _TeamCity*
 # Visual Studio code coverage results
 *.coverage
 *.coveragexml
+/coverage
 
 # NCrunch
 _NCrunch_*
@@ -262,6 +263,8 @@ FakesAssemblies/
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
 node_modules/
+/.pnp
+.pnp.js
 
 # Visual Studio 6 build log
 *.plg
@@ -332,3 +335,11 @@ ASALocalRun/
 *.DS_Store
 
 out
+/build
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
